examples/type_system/failing/15_effect_missing_from_caller.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/15_effect_missing_from_caller.flx
// error[E400]: Missing Ambient Effect
//
// Call to `log_line` requires effect `Console` in this function signature.
//
//   examples/type_system/failing/15_effect_missing_from_caller.flx:28:5
//    |
// 28 |     log_line("value=#{to_string(x)}")
//    |     ^^^^^^^^
//    |     -------- effectful call occurs here
//
// Hint:
//   Add `with Console` to the enclosing function.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E400

// E400: caller function is typed-pure but calls an IO function.

fn log_line(msg: String) -> Unit with IO {
    print(msg)
}

fn compute(x: Int) -> Int {
    log_line("value=#{to_string(x)}")
    x + 1
}

compute(41)
